--- a/ProyectoFinalEvaluacin_PaulaPlazaGuirado/app/src/main/res/layout/fragment_menu.xml
+++ b/ProyectoFinalEvaluacin_PaulaPlazaGuirado/app/src/main/res/layout/fragment_menu.xml
@@ -36,5 +36,13 @@
             android:layout_marginTop="5dp"
             android:layout_weight="1"
             android:src="@drawable/camion" />
+
+        <ImageView
+            android:id="@+id/iv_sesion"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:src="@drawable/sesion" />
     </LinearLayout>
 </FrameLayout>
