--- a/ProyectoFinalEvaluacin_PaulaPlazaGuirado/app/src/main/res/values/colors.xml
+++ b/ProyectoFinalEvaluacin_PaulaPlazaGuirado/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="verde">#D2F6D1</color>
     <color name="verdeO">#036057</color>
+    <color name="verdeT">#80D2F6D1</color>
 </resources>
