--- a/ProyectoFinalEvaluacin_PaulaPlazaGuirado/app/src/main/res/layout/recyler_ropa.xml
+++ b/ProyectoFinalEvaluacin_PaulaPlazaGuirado/app/src/main/res/layout/recyler_ropa.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,10 +10,11 @@
     app:cardPreventCornerOverlap="true"
     app:cardUseCompatPadding="true">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout"
+    <LinearLayout
+        android:id="@+id/list_item_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:padding="6dp">
 
         <ImageView
             android:id="@+id/iv_producto"
@@ -46,10 +46,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
+            android:layout_marginTop="15dp"
             android:text="TextView"
+            android:textColor="@color/verdeO"
             app:layout_constraintBottom_toBottomOf="@+id/txt_nombre"
             app:layout_constraintStart_toEndOf="@+id/txt_nombre"
             app:layout_constraintTop_toTopOf="@+id/txt_nombre" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
