--- a/ProyectoFinalEvaluacin_PaulaPlazaGuirado/app/src/main/res/layout/activity_paquetes.xml
+++ b/ProyectoFinalEvaluacin_PaulaPlazaGuirado/app/src/main/res/layout/activity_paquetes.xml
@@ -20,8 +20,9 @@
         android:id="@+id/fragmentContainerView5"
         android:name="com.example.proyectofinalevaluacin_paulaplazaguirado.View.Menu"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerView2" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
