--- a/ProyectoFinalEvaluacin_PaulaPlazaGuirado/app/src/main/res/layout/activity_paquetes.xml
+++ b/ProyectoFinalEvaluacin_PaulaPlazaGuirado/app/src/main/res/layout/activity_paquetes.xml
@@ -8,7 +8,7 @@
     tools:context=".View.PaquetesActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView2"
+        android:id="@+id/recyclerView_paquetes"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -20,7 +20,7 @@
         android:id="@+id/fragmentContainerView5"
         android:name="com.example.proyectofinalevaluacin_paulaplazaguirado.View.Menu"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
